--- a/pacote-projeto-d010 - Copia/CSS/style.css
+++ b/pacote-projeto-d010 - Copia/CSS/style.css
@@ -57,7 +57,7 @@ header > h1{
     width: 500px;
     font-size: 3em;
     margin: auto;
-    margin-bottom: 20px;
+    padding-bottom: 30px;
     font-family: var(--fonteDestaque);
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.527);
 }
